# NiimBLE

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_heartbeat.py  02_print_test_label.py  03_print_compression_testing_machine_label.py  04_print_product_label.py  05_print_product_label_direct.py  06_print_product_label_saved_or_auto.py  07_config_demo.py  08_force_scan_and_print.py
niimbot_b1/: __init__.py  canvas.py  config.py  font_utils.py  printer.py  templates.py  transport.py
